@@ -15,21 +15,19 @@ import java.util.stream.Collectors;
 public class AutoGenByPGSQL extends BaseAutoGen {
 
 
-    private String findAllTableSQL = """
-            select tablename from pg_tables where schemaname = 'public';
-                        """;
+    private String findAllTableSQL = "select tablename from pg_tables where schemaname = 'public';";
 
     @Override
     protected void creteField(JdbcTemplate jdbcTemplate, TableMeta tableMeta, FieldMeta fieldMeta) {
         StringBuilder commentsSql = new StringBuilder();
         StringBuilder sql = new StringBuilder();
 
-        sql.append("alter table %s add column ".formatted(tableMeta.getName()));
+        sql.append(String.format("alter table %s add column ", tableMeta.getName()));
 
         String fieldName = fieldMeta.getName();
         // 拼接注释
         if (StringEx.hasText(fieldMeta.getComment())) {
-            commentsSql.append("comment on COLUMN %s.%s is '%s';\n".formatted(tableMeta.getName(), fieldName, fieldMeta.getComment()));
+            commentsSql.append(String.format("comment on COLUMN %s.%s is '%s';\n", tableMeta.getName(), fieldName, fieldMeta.getComment()));
         }
         // 列名
         sql.append(fieldName);
@@ -42,7 +40,7 @@ public class AutoGenByPGSQL extends BaseAutoGen {
             // 拼接推断的数据类型
             sql.append(fieldMeta.getDbtype());
             if (StringEx.hasText(fieldMeta.getLen())) {
-                sql.append("(%s)".formatted(fieldMeta.getLen()));
+                sql.append(String.format("(%s)", fieldMeta.getLen()));
             }
             sql.append(" ");
             // 主键
@@ -57,7 +55,7 @@ public class AutoGenByPGSQL extends BaseAutoGen {
             }
             // 是否 唯一性
             if (fieldMeta.isUnique()) {
-                sql.append("constraint uk_%s_%s unique".formatted(tableMeta.getName(), fieldName));
+                sql.append(String.format("constraint uk_%s_%s unique", tableMeta.getName(), fieldName));
                 sql.append(" ");
             }
         }
@@ -70,20 +68,19 @@ public class AutoGenByPGSQL extends BaseAutoGen {
 
     @Override
     protected List<String> getAllFieldByTable(JdbcTemplate jdbcTemplate, TableMeta tableMeta) {
-        String fieldSQL = """
-                SELECT
-                    col_description (A .attrelid, A .attnum) AS COMMENT,
-                    format_type (A .atttypid, A .atttypmod) AS TYPE,
-                    A .attname AS NAME,
-                    A .attnotnull AS nullable
-                FROM
-                    pg_class AS C,
-                    pg_attribute AS A
-                WHERE
-                        C .relname = '%s' --指定表
-                  AND A .attrelid = C .oid
-                  AND A .attnum > 0;
-                """.formatted(tableMeta.getName());
+        String fieldSQL = "SELECT\n" +
+                "                    col_description (A .attrelid, A .attnum) AS COMMENT,\n" +
+                "                    format_type (A .atttypid, A .atttypmod) AS TYPE,\n" +
+                "                    A .attname AS NAME,\n" +
+                "                    A .attnotnull AS nullable\n" +
+                "                FROM\n" +
+                "                    pg_class AS C,\n" +
+                "                    pg_attribute AS A\n" +
+                "                WHERE\n" +
+                "                        C .relname = '%s' --指定表\n" +
+                "                  AND A .attrelid = C .oid\n" +
+                "                  AND A .attnum > 0;";
+        fieldSQL = String.format(fieldSQL, tableMeta.getName());
 
         List<Map<String, Object>> list = jdbcTemplate.queryForList(fieldSQL);
         List<String> names = list.stream().map(v -> v.get("name").toString()).collect(Collectors.toList());
@@ -96,19 +93,17 @@ public class AutoGenByPGSQL extends BaseAutoGen {
         StringBuilder commentsSql = new StringBuilder();
 
         // 1. 名
-        sql.append("""
-                    create table %s
-                (
-                    """.formatted(tableMeta.getName()));
+        sql.append(String.format(" create table %s \n(", tableMeta.getName()));
+
         if (StringEx.hasText(tableMeta.getComment())) {
-            commentsSql.append("comment on table %s is '%s';\n".formatted(tableMeta.getName(), tableMeta.getComment()));
+            commentsSql.append(String.format("comment on table %s is '%s';\n", tableMeta.getName(), tableMeta.getComment()));
         }
         // 2. 字段
         for (FieldMeta fieldMeta : tableMeta.getFieldList()) {
             String fieldName = fieldMeta.getName();
             // 拼接注释
             if (StringEx.hasText(fieldMeta.getComment())) {
-                commentsSql.append("comment on COLUMN %s.%s is '%s';\n".formatted(tableMeta.getName(), fieldName, fieldMeta.getComment()));
+                commentsSql.append(String.format("comment on COLUMN %s.%s is '%s';\n", tableMeta.getName(), fieldName, fieldMeta.getComment()));
             }
             // 列名
             sql.append(fieldName);
@@ -123,7 +118,7 @@ public class AutoGenByPGSQL extends BaseAutoGen {
             // 拼接推断的数据类型
             sql.append(fieldMeta.getDbtype());
             if (StringEx.hasText(fieldMeta.getLen())) {
-                sql.append("(%s)".formatted(fieldMeta.getLen()));
+                sql.append(String.format("(%s)", fieldMeta.getLen()));
             }
             sql.append(" ");
             // 主键
@@ -138,7 +133,7 @@ public class AutoGenByPGSQL extends BaseAutoGen {
             }
             // 是否 唯一性
             if (fieldMeta.isUnique()) {
-                sql.append("constraint uk_%s_%s unique".formatted(tableMeta.getName(), fieldName));
+                sql.append(String.format("constraint uk_%s_%s unique", tableMeta.getName(), fieldName));
                 sql.append(" ");
             }
 
